--- a/index.html
+++ b/index.html
@@ -1,68 +1,87 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haha!Bạn đã bị lừa!</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Haha!Bạn đã bị lừa!</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
 
-        h1 {
-            color: #d9534f; /* Màu đỏ nổi bật */
-            font-size: 3em;
-            animation: bounce 1s infinite;
-        }
-        /* Hiệu ứng JavaScript sẽ thêm đoạn văn bản này */
-        #thong_diep {
-            font-size: 5em;
-            font-weight: bold;
-        }
+        #container {
+            /* Đảm bảo container căn giữa các phần tử con */
+            display: flex;
+            flex-direction: column; /* Xếp các phần tử theo chiều dọc */
+            align-items: center;
+        }
 
-        @keyframes bounce {
-            0%, 20%, 50%, 80%, 100% {
-                transform: translateY(0);
-            }
+        .main-title {
+            color: #d9534f; /* Màu đỏ nổi bật */
+            font-size: 3em;
+            margin-bottom: 5px; /* Giảm khoảng cách với dòng dưới */
+            animation: bounce 1s infinite;
+        }
 
-            40% {
-                transform: translateY(-30px);
-            }
+        .small-text {
+            color: black; /* Màu đen */
+            font-size: 1.2em; /* Kích thước nhỏ hơn */
+            margin-top: 0; /* Loại bỏ margin trên */
+        }
+        /* Hiệu ứng JavaScript sẽ thêm đoạn văn bản này */
+        #thong_diep {
+            font-size: 5em;
+            font-weight: bold;
+        }
 
-            60% {
-                transform: translateY(-15px);
-            }
-        }
-    </style>
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+
+            40% {
+                transform: translateY(-30px);
+            }
+
+            60% {
+                transform: translateY(-15px);
+            }
+        }
+    </style>
 </head>
 <body>
 
-    <div id="container">
-    </div>
+    <div id="container">
+    </div>
 
-    <script>
-        // Lấy phần tử HTML có ID là 'container'
-        const container = document.getElementById('container');
+    <script>
+        // Lấy phần tử HTML có ID là 'container'
+        const container = document.getElementById('container');
 
-        // Tạo một thẻ <h1> mới
-        const messageElement = document.createElement('h1');
+        // 1. Tạo và thiết lập thẻ <h1> (dòng chữ đỏ)
+        const mainMessageElement = document.createElement('h1');
+        mainMessageElement.textContent = "Chúc mừng bạn đã trúng thưởng!";
+        mainMessageElement.classList.add('main-title'); // Thêm class để áp dụng CSS
 
-        // Đặt nội dung cho thẻ <h1>
-        messageElement.textContent = "hehe bạn đã bị lừa";
+        // 2. Tạo và thiết lập thẻ <p> (dòng chữ đen nhỏ)
+        const smallTextElement = document.createElement('p');
+        smallTextElement.textContent = "hehe bạn bị lừa rùi:))))";
+        smallTextElement.classList.add('small-text'); // Thêm class để áp dụng CSS
 
-        // Thêm thẻ <h1> vào container
-        container.appendChild(messageElement);
+        // 3. Thêm các thẻ vào container theo thứ tự
+        container.appendChild(mainMessageElement);
+        container.appendChild(smallTextElement);
 
-        // (Tùy chọn) Thêm thông báo vào console để thêm phần vui vẻ
-        console.log("Tìm kiếm lỗi à? Không có gì đâu, hehe!");
-    </script>
+        // (Tùy chọn) Thêm thông báo vào console để thêm phần vui vẻ
+        console.log("Tìm kiếm lỗi à? Không có gì đâu, hehe!");
+    </script>
 
 </body>
 </html>
