--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
         .small-text {
             color: black; /* Màu đen */
-            font-size: 1.5em; /* Kích thước nhỏ hơn nhưng vẫn dễ đọc */
-            margin-top: 0; /* Loại bỏ margin trên */
+            font-size: 1em; /* Kích thước nhỏ hơn nhưng vẫn dễ đọc */
+            margin-top: 10px; /* Loại bỏ margin trên */
         }
 
         @keyframes bounce {
@@ -80,3 +80,4 @@
 
 </body>
 </html>
+
